# saa-platform

./: .gitignore  README.md  clean_data.py  pyproject.toml  requirements.txt
data/processed/: cleaned_data.xlsx
data/raw/: hypothetical_portfolio_abc_2000x67.xlsx
docs/: architecture.md  data_dictionary.md  project_scope.md
src/saa_platform/: cleaning.py  cli.py  ingestion.py  profiling.py  reporting.py  validation.py
src/saa_platform.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
