[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "saa-platform"
version = "0.1.0"
description = "Portfolio data engine for strategic asset allocation"
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "openpyxl",
]

[project.scripts]
saa-clean = "saa_platform.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]